chore: review & simplify server health warning escaping and code